# family-resemblance

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  publish.sh  pyproject.toml
.github/workflows/: ci.yml
data/: PROVENANCE.md  tractatus.txt  tractatus_index.json
docs/: USAGE.md  architecture.d2
examples/: wfr_demo.py
src/family_resemblance/: __init__.py  cli.py
src/family_resemblance/_ext/: __init__.py  sklearn_compat.py
src/family_resemblance/_ext/mcp/: __init__.py  adapter.py  inducer.py  server.py  trace.py
src/family_resemblance/core/: __init__.py  cluster.py  therapeutic.py  wfr.py
tests/: conftest.py  test_cli.py  test_cluster.py  test_mcp_extra.py  test_provenance_policy.py  test_smoke.py  test_therapeutic.py  test_wfr.py
