[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-resemblance"
version = "0.1.0.dev0"
description = "Weighted family-resemblance clustering grounded in Wittgenstein PI §65-67 (prototype-free, sklearn-compatible)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "runza", email = "runzaisongpu95@gmail.com"}]
keywords = ["clustering", "wittgenstein", "family-resemblance", "scikit-learn", "philosophy", "unsupervised"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "scikit-learn>=1.4,<2.0",
  "numpy>=1.23,<3.0",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.7,<2.0",
  "genson>=1.2,<2.0",
  "jsonschema>=4,<5",
]
viz = [
  "matplotlib>=3.5",
  "seaborn>=0.12",
]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "typer>=0.9",
  "rich>=13",
  "build>=1",
  "twine>=4",
]

[project.scripts]
fr = "family_resemblance.cli:app"

[project.urls]
Homepage = "https://github.com/runza/family-resemblance"
Issues = "https://github.com/runza/family-resemblance/issues"
Documentation = "https://github.com/runza/family-resemblance#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
